42.ik lecke vegeig

--- a/eTickets/Views/Actors/Create.cshtml
+++ b/eTickets/Views/Actors/Create.cshtml
@@ -49,15 +49,14 @@
 
 @section Scripts{
     <script>
-
         $(document).ready(function () {
-            var output = document.getElementById("ProfilePicturePreview");
+            var output = document.getElementById('ProfilePicturePreview');
             output.src = $("#ProfilePictureURL").val();
         })
 
         $("#ProfilePictureURL").on("change", function () {
-            var output = document.getElementById("ProfilePicturePreview");
-            output.src = $(this.).val();
+            var output = document.getElementById('ProfilePicturePreview');
+            output.src = $(this).val();
         })
     </script>
 }
