--- a/eTickets/Views/Producers/Edit.cshtml
+++ b/eTickets/Views/Producers/Edit.cshtml
@@ -1,13 +1,13 @@
-﻿@model Actor
+﻿@model Producer
 
 @{
-    ViewData["Title"] = "Update actor";
+    ViewData["Title"] = "Update producer";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h3>Update Actor</h3>
+            <h3>Update Producer</h3>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
