--- a/eTickets/Views/Producers/Create.cshtml
+++ b/eTickets/Views/Producers/Create.cshtml
@@ -15,7 +15,7 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="form-group text-center">
-                        <img class="border-info rounded-circle" style="max-width: 150px" id="ProfilePicturePreview" />
+                        <img id="ProfilePicturePreview" class="border-info rounded-circle" style="max-width: 150px" id="ProfilePicturePreview" />
                     </div>
 
                     <div class="form-group">
