--- a/eTickets/Views/Cinemas/Delete.cshtml
+++ b/eTickets/Views/Cinemas/Delete.cshtml
@@ -1,13 +1,13 @@
 ﻿@model Actor
 
 @{
-    ViewData["Title"] = "Details of the actor";
+    ViewData["Title"] = "Delete actor";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h3>Details for @Model.FullName</h3>
+            <h3>Delete confirmation for @Model.FullName</h3>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
@@ -33,7 +33,10 @@
                     </div>
 
                     <div class="form-group">
-                        <a class="btn btn-outline-success float-right" asp-action="Edit" asp-route-id="@Model.Id" >Edit</a>
+                        <form asp-action="Delete">
+                            <input type="hidden" asp-for="Id" />
+                            <input type="submit" value="Confirm" class="btn btn-danger float-right"/>
+                        </form>
                         <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
                     </div>
 
@@ -47,8 +50,8 @@
 @section Scripts{
     <script>
         $(document).ready(function () {
-            var output = document.getElementById('ProfilePicturePreview');
-            output.src = $('#ProfilePictureURL').val();
+            var output = document.getElementById("ProfilePicturePreview");
+            output.src = $("#ProfilePictureURL").val();
         })
     </script>
 }
