--- a/eTickets/Views/Actors/Delete.cshtml
+++ b/eTickets/Views/Actors/Delete.cshtml
@@ -50,8 +50,8 @@
 @section Scripts{
     <script>
         $(document).ready(function () {
-            var output = document.getElementById("ProfilePicturePreview");
-            output.src = $("#ProfilePictureURL").val();
+            var output = document.getElementById('ProfilePicturePreview');
+            output.src = $('#ProfilePictureURL').val();
         })
     </script>
 }
