--- a/eTickets/Views/Cinemas/Delete.cshtml
+++ b/eTickets/Views/Cinemas/Delete.cshtml
@@ -1,35 +1,35 @@
-﻿@model Actor
+﻿@model Cinema
 
 @{
-    ViewData["Title"] = "Delete actor";
+    ViewData["Title"] = "Delete cinema";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h3>Delete confirmation for @Model.FullName</h3>
+            <h3>Delete confirmation for @Model.Name</h3>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
 
                     <div class="form-group text-center">
-                        <img class="border-info rounded-circle" style="max-width: 150px" id="ProfilePicturePreview" />
+                        <img class="border-info rounded-circle" style="max-width: 150px" id="LogoPreview" />
                     </div>
 
                     <div class="form-group">
-                        <label asp-for="ProfilePictureURL" class="control-label"></label>
-                        <input asp-for="ProfilePictureURL" class="form-control" readonly />
-                        <span asp-validation-for="ProfilePictureURL" class="text-danger"></span>
+                        <label asp-for="Logo" class="control-label"></label>
+                        <input asp-for="Logo" class="form-control" readonly />
+                        <span asp-validation-for="Logo" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="FullName" class="control-label"></label>
-                        <input asp-for="FullName" class="form-control" readonly />
-                        <span asp-validation-for="FullName" class="text-danger"></span>
+                        <label asp-for="Name" class="control-label"></label>
+                        <input asp-for="Name" class="form-control" readonly />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Bio" class="control-label"></label>
-                        <input asp-for="Bio" class="form-control" readonly />
-                        <span asp-validation-for="Bio" class="text-danger"></span>
+                        <label asp-for="Description" class="control-label"></label>
+                        <input asp-for="Description" class="form-control" readonly />
+                        <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
@@ -50,8 +50,8 @@
 @section Scripts{
     <script>
         $(document).ready(function () {
-            var output = document.getElementById("ProfilePicturePreview");
-            output.src = $("#ProfilePictureURL").val();
+            var output = document.getElementById('LogoPreview');
+            output.src = $('#Logo').val();
         })
     </script>
 }
