--- a/eTickets/Views/Cinemas/Edit.cshtml
+++ b/eTickets/Views/Cinemas/Edit.cshtml
@@ -1,13 +1,13 @@
-﻿@model Actor
+﻿@model Cinema
 
 @{
-    ViewData["Title"] = "Update actor";
+    ViewData["Title"] = "Update cinema";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h3>Update Actor</h3>
+            <h3>Update Cinema</h3>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
@@ -15,23 +15,23 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="form-group text-center">
-                        <img class="border-info rounded-circle" style="max-width: 150px" id="ProfilePicturePreview" />
+                        <img id="CinemaLogoPreview" class="border-info rounded-circle" style="max-width: 150px" id="ProfilePicturePreview" />
                     </div>
 
                     <div class="form-group">
-                        <label asp-for="ProfilePictureURL" class="control-label"></label>
-                        <input asp-for="ProfilePictureURL" class="form-control" />
-                        <span asp-validation-for="ProfilePictureURL" class="text-danger"></span>
+                        <label asp-for="Logo" class="control-label"></label>
+                        <input asp-for="Logo" class="form-control" />
+                        <span asp-validation-for="Logo" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="FullName" class="control-label"></label>
-                        <input asp-for="FullName" class="form-control" />
-                        <span asp-validation-for="FullName" class="text-danger"></span>
+                        <label asp-for="Name" class="control-label"></label>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Bio" class="control-label"></label>
-                        <input asp-for="Bio" class="form-control" />
-                        <span asp-validation-for="Bio" class="text-danger"></span>
+                        <label asp-for="Description" class="control-label"></label>
+                        <input asp-for="Description" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
@@ -49,14 +49,13 @@
 
 @section Scripts{
     <script>
-
         $(document).ready(function () {
-            var output = document.getElementById('ProfilePicturePreview');
-            output.src = $("#ProfilePictureURL").val();
+            var output = document.getElementById('CinemaLogoPreview');
+            output.src = $("#Logo").val();
         })
 
-        $("#ProfilePictureURL").on("change", function () {
-            var output = document.getElementById('ProfilePicturePreview');
+        $("#Logo").on("change", function () {
+            var output = document.getElementById('CinemaLogoPreview');
             output.src = $(this).val();
         })
     </script>
