--- a/eTickets/Views/Movies/Index.cshtml
+++ b/eTickets/Views/Movies/Index.cshtml
@@ -1,14 +1,9 @@
-﻿@*Define model*@
+﻿@model IEnumerable<Movie>
 
-@model IEnumerable<Movie>
-
-@*Define ViewData*@
 
 @{
     ViewData["Title"] = "List of Movies";
 }
-
-@*Write code*@
 
 <div class="row">
     @foreach (var item in Model)
@@ -57,7 +52,9 @@
                     <div class="col-md-12">
                         <div class="card-footer">
                             <p class="card-text">
-                                <a class="btn btn-outline-primary float-right"><i class="bi bi-eye-fill"></i> Show Details</a>
+                                <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
+                                <i class="bi bi-eye-fill"></i> Show Details
+                                </a>
                                 <a class="btn btn-success text-white"><i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))</a>
                             </p>
                         </div>
