--- a/eTickets/Views/Orders/ShoppingCart.cshtml
+++ b/eTickets/Views/Orders/ShoppingCart.cshtml
@@ -55,14 +55,13 @@
             </tfoot>
         </table>
 
-        <div class="text-center">
+        <div class="text-right">
             <div class="btn-group">
                 @*<a class="btn btn-outline-primary" asp-action="CompleteOrder">
                     Complete order
                 </a>*@
                 <div id="paypal-btn"></div>
-                |
-
+                <span style="padding:5px"></span>
                 <a class="btn btn-outline-success" asp-controller="Movies" asp-action="Index">
                     Add more items
                 </a>
@@ -86,18 +85,24 @@
             },
 
             //Customize button
-            locale: 'de-AT',
+            locale: 'de_AT',
             style:{
                 size: 'small',
-                color: 'gold',
-                shape: 'pill'
+                color: 'black',
+                shape: 'rect'
             },
             commit: true,
 
             //Set up a payment
-
+            payment: function (data, actions) {
+                console.log("payment set up");
+            },
 
             //Execute the payment
+            onAuthorize: function (data, actions) {
+                console.log("payment executed");
+            }
+
 
         }, '#paypal-btn');
     </script>
