--- a/eTickets/Views/Orders/ShoppingCart.cshtml
+++ b/eTickets/Views/Orders/ShoppingCart.cshtml
@@ -1,4 +1,5 @@
-﻿@using eTickets.Data.ViewModels;
+﻿@using System.Globalization;
+@using eTickets.Data.ViewModels;
 @model ShoppingCartVM
 
 @{
@@ -46,9 +47,10 @@
             <tfoot>
                 <tr>
                     <td colspan="2"></td>
-                    <td><b>Total:</b></td>
+                    <td><b>Total in €: </b></td>
                     <td>
-                        @Model.ShoppingCartTotal.ToString("c")
+                        @*<p>@Model.ShoppingCartTotal.ToString("c")</p>*@
+                        <p id="total">@Model.ShoppingCartTotal.ToString(CultureInfo.InvariantCulture)</p>
                     </td>
                     <td></td>
                 </tr>
@@ -77,7 +79,7 @@
 
     <script>
 
-        let _total = @Html.Raw(Model.ShoppingCartTotal);
+        //let _total = @Html.Raw(Model.ShoppingCartTotal);
 
         paypal.Button.render({
             //Configure environment
@@ -90,8 +92,8 @@
             locale: 'de_AT',
             style: {
                 size: 'small',
-                color: 'gold',
-                shape: 'pill'
+                color: 'blue',
+                shape: 'rect'
             },
             commit: true,
 
@@ -100,7 +102,7 @@
                 return actions.payment.create({
                     transactions: [{
                         amount: {
-                            total: _total,
+                            total: document.getElementById("total").innerHTML,
                             currency: 'EUR'
                         }
                     }]
